[tool.poetry]
name = "tiny-graph"
version = "0.1.0"
description = "A light weight graph approach to LLM workflows"
authors = ["Fernando Meira <fmeira.filho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
pydantic = "^2.9.2"
pytest = "^8.3.3"
rich = "^13.9.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
