[tool.poetry]
name = "primeGraph"
version = "0.0.1"
description = "A lightweight graph approach to LLM workflows."
authors = ["Fernando Meira <fmeira.filho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
pydantic = "^2.9.2"
pytest = "^8.3.3"
rich = "^13.9.4"
psycopg2-binary = "^2.9.10"
pytest-asyncio = "^0.24.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
websockets = "^10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
