[tool.poetry]
name = "tiny-graph"
version = "0.1.0"
description = "A light weight graph approach to LLM workflows."
authors = ["Fernando Meira <fmeira.filho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
